--- a/asset/css/main.css
+++ b/asset/css/main.css
@@ -495,7 +495,11 @@
     text-decoration: underline;
 }
 .sc-themepost .list1-info .txt{
-    display: block;
+    display: -webkit-box;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
     margin-top: 6px;
     line-height: 19px;
     font-size: 13px;
@@ -504,8 +508,6 @@
     color: #505050;
     margin-top: 4px;
 }
-.sc-themepost .list1-info .source{}
-
 .sc-themepost .group-theme.list2{
     padding:18px 0;
     border-bottom: 1px solid #dae1e6;
@@ -973,6 +975,9 @@
 }
 .sc-shop .goods-list .dsc{
     display: block;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 .sc-shop .btn-area{
     display: inline-block;
@@ -1051,7 +1056,6 @@
     background-position: -71px -54px;
     margin: 10px 12px;
 }
-.sc-shop .shopnews-hd .next{}
 .sc-shop .shopnews-hd .navi .next::before{
     content: '';
     display: inline-block;
@@ -1088,55 +1092,58 @@
 }
 .sc-shop .group-shopnews .txt{
     color: #202020;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
-.sc-shop .group-cate{
+.group-cate{
     position: relative;
     padding: 55px 0 19px;
     margin: 0 8px;
     border-top: 1px solid #c9cccf;
     overflow: hidden;
 }
-.sc-shop .group-cate .cate-area{
+.group-cate .cate-area{
     position: absolute;
     top: 20px;
     left: 5px;
 }
-.sc-shop .group-cate .cate-area a{
+.group-cate .cate-area a{
     display: inline-block;
     font-size: 13px;
     line-height: 17px;
     font-weight: 500;
 }
-.sc-shop .group-cate .cate-area a+a{
+.group-cate .cate-area a+a{
     margin-left: 12px;
 }
-.sc-shop .group-cate .cate-area a.on{
+.group-cate .cate-area a.on{
     color: #03c75a;
     font-weight: 700;
     border-bottom: 2px solid #19ce60;
 }
-.sc-shop .group-cate .btn-area{
+.group-cate .btn-area{
     position: absolute;
     top: 14px;
     right: 0;
     overflow: hidden;
 }
-.sc-shop .group-cate .navi{
+.group-cate .navi{
     overflow: hidden;
     float: left;
     margin-left: 7px;
 }
-.sc-shop .group-cate .navi a{
+.group-cate .navi a{
     border: 1px solid #dae1e6;;
     box-sizing: border-box;
     float: left;
     width: 29px;
     height: 29px;
 }
-.sc-shop .group-cate .navi .prev{
+.group-cate .navi .prev{
     margin-right: -1px;
 }
-.sc-shop .group-cate .navi .prev::after{
+.group-cate .navi .prev::after{
     content: '';
     display: inline-block;
     width: 5px;
@@ -1144,8 +1151,7 @@
     background-position: -71px -54px;
     margin: 10px 12px;
 }
-.sc-shop .group-cate .navi .next{}
-.sc-shop .group-cate .navi .next::after{
+.group-cate .navi .next::after{
     content: '';
     display: inline-block;
     width: 5px;
@@ -1154,49 +1160,49 @@
     margin: 10px 12px;
 }
 
-.sc-shop .group-cate .cate-box{
+.group-cate .cate-box{
     overflow: hidden;
     margin-right: -5px;
 }
-.sc-shop .group-cate .cate-box li{
+.group-cate .cate-box li{
     float: left;
     width: 50%;
 }
-.sc-shop .group-cate .cate-box li:hover{
+.group-cate .cate-box li:hover{
     text-decoration: underline;
 }
 /* 정렬할 때 a태그에 display:block 필수 */
-.sc-shop .group-cate .cate-box li a{
+.group-cate .cate-box li a{
     display: block;
     margin-right: 5px;
 }
-.sc-shop .group-cate .cate-box .thumb{
+.group-cate .cate-box .thumb{
     box-sizing: border-box;
     overflow: hidden;
 }
-.sc-shop .group-cate .cate-box .thumb img{
+.group-cate .cate-box .thumb img{
     transition: transform .2s cubic-bezier(.165,.84,.44,1),-webkit-transform .2s cubic-bezier(.165,.84,.44,1);
 }
-.sc-shop .group-cate .cate-box li:hover img{
+.group-cate .cate-box li:hover img{
     transform: scale(1.05);
 }
-.sc-shop .group-cate .cate-box .txt{
+.group-cate .cate-box .txt{
     display: block;
     text-align: center;
     line-height: 16px;
     font-weight: 700;
     margin-top: 9px;
 }
-.sc-shop .group-plusdeal{
+.group-plusdeal{
     padding: 16px 0;
     margin: 0 8px;
     border-top: 1px solid #c9cccf;
 }
-.sc-shop .plusdeal-hd{
+.plusdeal-hd{
     position: relative;
     margin-left: 5px;
 }
-.sc-shop .plusdeal-hd .ic-plusdeal::before{
+.plusdeal-hd .ic-plusdeal::before{
     content: '';
     display: inline-block;
     width: 40px;
@@ -1205,32 +1211,32 @@
     margin-right: 5px;
     vertical-align: top;
 }
-.sc-shop .plusdeal-hd .title{
+.plusdeal-hd .title{
     font-size: 13px;
     font-weight: 500;
     line-height: 21px;
 }
-.sc-shop .plusdeal-hd .btn-area{
+.plusdeal-hd .btn-area{
     position: absolute;
     top: -6px;
     right: 0;
 }
-.sc-shop .plusdeal-hd .navi{
+.plusdeal-hd .navi{
     float: left;
     overflow: hidden;
     margin-left: 7px;
 }
-.sc-shop .plusdeal-hd .navi a{
+.plusdeal-hd .navi a{
     border: 1px solid #dae1e6;
     box-sizing: border-box;
     float: left;
     width: 29px;
     height: 29px;
 }
-.sc-shop .plusdeal-hd .prev{
+.plusdeal-hd .prev{
     margin-right: -1px;
 }
-.sc-shop .plusdeal-hd .prev::after{
+.plusdeal-hd .prev::after{
     content: '';
     display: inline-block;
     width: 5px;
@@ -1238,8 +1244,8 @@
     background-position: -71px -54px;
     margin: 10px 12px;
 }
-.sc-shop .plusdeal-hd .next{}
-.sc-shop .plusdeal-hd .next::after{
+.plusdeal-hd .next{}
+.plusdeal-hd .next::after{
     content: '';
     display: inline-block;
     width: 5px;
@@ -1248,18 +1254,18 @@
     margin: 10px 12px;
 }
 
-.sc-shop .group-plusdeal .deal-list{
+.group-plusdeal .deal-list{
     margin-top: 15px;
     overflow: hidden;
 }
-.sc-shop .group-plusdeal .deal-list li{
+.group-plusdeal .deal-list li{
     float: left;
     margin-bottom: 10px;
 }
-.sc-shop .group-plusdeal .deal-list li:hover{
+.group-plusdeal .deal-list li:hover{
     text-decoration: underline;
 }
-.sc-shop .group-plusdeal .deal-list .thumb-box{
+.group-plusdeal .deal-list .thumb-box{
     position: relative;
     object-fit: cover;
     float: left;
@@ -1267,7 +1273,7 @@
     box-sizing: border-box;
     margin-right: 10px;
 }
-.sc-shop .group-plusdeal .deal-list .thumb-box::after{
+.group-plusdeal .deal-list .thumb-box::after{
     content: '';
     position: absolute;
     top: 0; bottom: 0;
@@ -1275,11 +1281,11 @@
     opacity: 0.08;
     border: 1px solid #000;
 }
-.sc-shop .group-plusdeal .deal-list .thumb-box img{
+.group-plusdeal .deal-list .thumb-box img{
     object-fit: cover;
     width: 100%;
 }
-.sc-shop .group-plusdeal .deal-list .thumb-box .ico-event{
+.group-plusdeal .deal-list .thumb-box .ico-event{
     position: absolute;
     top: 0; left: 0;
     display: inline-block;
@@ -1288,7 +1294,7 @@
     background-position: -42px -54px;
     vertical-align: top;
 }
-.sc-shop .group-plusdeal .deal-list .thumb-box.box02::before{
+.group-plusdeal .deal-list .thumb-box.box02::before{
     content: '';
     position: absolute;
     top: 20px;
@@ -1300,11 +1306,10 @@
     z-index: 1;
     vertical-align: top;
 }
-.sc-shop .group-plusdeal .deal-list .thumb-box:first-child{
+.group-plusdeal .deal-list .thumb-box:first-child{
     overflow: hidden;
 }
-.sc-shop .group-plusdeal .deal-list .txt-box{}
-.sc-shop .group-plusdeal .deal-list .title{
+.group-plusdeal .deal-list .title{
     line-height: 17px;
     font-weight: 500;
     display: -webkit-box;
@@ -1312,15 +1317,13 @@
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
 }
-.sc-shop .group-plusdeal .deal-list .price-area{
+.group-plusdeal .deal-list .price-area{
     margin-top: 5px;
     font-weight: 700;
 }
-.sc-shop .group-plusdeal .deal-list .red{
+.group-plusdeal .deal-list .red{
     color: #f04045;
 }
-.sc-shop .group-plusdeal .deal-list .price{}
-
 footer{
     background-color: #fafbfc;
     border-top: 1px solid #e4e8eb;
