--- a/asset/css/layout.css
+++ b/asset/css/layout.css
@@ -2,7 +2,6 @@
 @import './common.css';
 
 /* ctrl+j 라인 한 줄 정리 */
-header{}
 header .group-flex1{ width: 1130px; height: 160px; position: relative; margin: 0 auto; }
 
 header .logo{
@@ -11,7 +10,6 @@ header .logo{
     left: -9px;
     margin-top: -32px;
 }
-header .logo a{}
 header .logo a::after{
     content: '';
     width: 222px;
@@ -20,16 +18,16 @@ header .logo a::after{
     background-position: 0 -158px;
 }
 
-header .search-area{
+.search-area{
     position: absolute;
     top: 50%;
     left: 238px;
     margin-top: -28px;
 }
-header .search-area .search-box{ position: relative; width: 582px; height: 52px; border: 2px solid #19ce60; /* old 브라우저에서 지원되게 하려고 작성 */ -webkit-border-radius: 2px; border-radius: 2px; }
-header .search-area .input-text{ width: 444px; height: 24px; padding: 13px 15px; margin: 1px; background-color: #fff; font-size: 18px; line-height: 24px; color: #000; font-weight: 700; outline: 0; /* 텍스트 포커스 없애는 용도 */ }
-header .search-area .btn-submit{ width: 56px; height: 56px; background: #19ce60; position: absolute; top: 0; right: 0; border-radius: 0 3px 3px 0; }
-header .search-area .btn-submit::after{
+.search-area .search-box{ position: relative; width: 582px; height: 52px; border: 2px solid #19ce60; /* old 브라우저에서 지원되게 하려고 작성 */ -webkit-border-radius: 2px; border-radius: 2px; }
+.search-area .input-text{ width: 444px; height: 24px; padding: 13px 15px; margin: 1px; background-color: #fff; font-size: 18px; line-height: 24px; color: #000; font-weight: 700; outline: 0; /* 텍스트 포커스 없애는 용도 */ }
+.search-area .btn-submit{ width: 56px; height: 56px; background: #19ce60; position: absolute; top: 0; right: 0; border-radius: 0 3px 3px 0; }
+.search-area .btn-submit::after{
     content: '';
     display: inline-block;
     width: 22px;
@@ -37,14 +35,14 @@ header .search-area .btn-submit::after{
     background-position: -420px 0;
     vertical-align: top;
 }
-header .search-area .btn-keyboard{
+.search-area .btn-keyboard{
     position: absolute;
     top: 0; right: 84px;
     bottom: 0;
     width: 36px;
     z-index: 400;
 }
-header .search-area .keyboard{
+.search-area .keyboard{
     position: absolute;
     top: 50%;
     display: inline-block;
@@ -53,13 +51,13 @@ header .search-area .keyboard{
     background-position: -420px -402px;
     margin: -6px 0 0 8px;
 }
-header .search-area .btn-arrow{
+.search-area .btn-arrow{
     position: absolute;
     top: 0; right: 64px;
     bottom: 0;
     width: 22px;
 }
-header .search-area .ic-arrow{
+.search-area .ic-arrow{
     position: absolute;
     top: 50%;
     margin: -2px 0 0 5px;
@@ -69,22 +67,22 @@ header .search-area .ic-arrow{
     background-position: -408px -100px;
 }
 
-header .service-area{ position: absolute; top: 12px; right: -3px; }
-header .service-area .bar{ float: left; width: 1px; height: 10px; background: #e4e8eb; margin: 3px 7px;}
-header .service-area .link-start{float: left; font-size: 11px;}
-header .service-area .link-start::after{ content: ''; display: inline-block; width: 26px; height: 26px; vertical-align: top; background-position: -308px -345px; margin: -3px 0 0 3px; }
-header .service-area .link-junior{float: left;}
-header .service-area .link-junior::after{ content: ''; display: inline-block; width: 26px; height: 26px; vertical-align: top; width: 60px; height: 10px; background-position: -262px -330px; margin: 3px; }
-header .service-area .link-junior:hover::after{background-position: -200px -330px; }
-header .service-area .link-bin{float: left; margin-left: 6px;}
-header .service-area .link-bin::after{ content: ''; display: inline-block; width: 34px; height: 11px; background-position: -369px -299px; margin: 3px 2px 2px; }
-header .service-area .link-bin:hover::after{background-position: -380px -199px;}
-header .group-flex2{ border-top: 1px solid #e4e4e4; box-shadow: 0 1px 3px 0 rgb(0 0 0 / 12%); }
-header .group-flex2 .inner{ width: 1130px; margin: 0 auto; }
-header .group-flex2 .inner::after{content: '';clear: both;display: block;}
+.service-area{ position: absolute; top: 12px; right: -3px; }
+.service-area .bar{ float: left; width: 1px; height: 10px; background: #e4e8eb; margin: 3px 7px;}
+.service-area .link-start{float: left; font-size: 11px;}
+.service-area .link-start::after{ content: ''; display: inline-block; width: 26px; height: 26px; vertical-align: top; background-position: -308px -345px; margin: -3px 0 0 3px; }
+.service-area .link-junior{float: left;}
+.service-area .link-junior::after{ content: ''; display: inline-block; width: 26px; height: 26px; vertical-align: top; width: 60px; height: 10px; background-position: -262px -330px; margin: 3px; }
+.service-area .link-junior:hover::after{background-position: -200px -330px; }
+.service-area .link-bin{float: left; margin-left: 6px;}
+.service-area .link-bin::after{ content: ''; display: inline-block; width: 34px; height: 11px; background-position: -369px -299px; margin: 3px 2px 2px; }
+.service-area .link-bin:hover::after{background-position: -380px -199px;}
+.group-flex2{ border-top: 1px solid #e4e4e4; box-shadow: 0 1px 3px 0 rgb(0 0 0 / 12%); }
+.group-flex2 .inner{ width: 1130px; margin: 0 auto; }
+.group-flex2 .inner::after{content: '';clear: both;display: block;}
 
-header .gnb-area{overflow: hidden; float: left;}
-header .gnb-area .gnb-list{
+.gnb-area{overflow: hidden; float: left;}
+.gnb-area .gnb-list{
     float: left;
     font-size: 15px;
     font-weight: bold;
@@ -94,10 +92,10 @@ header .gnb-area .gnb-list{
     overflow: hidden;
     letter-spacing: -0.3px;
 }
-header .gnb-area .gnb-list a{
+.gnb-area .gnb-list a{
     display: block;
 }
-header .gnb-area .gnb-list .ic-mail{
+.gnb-area .gnb-list .ic-mail{
     display: inline-block;
     width: 21px;
     height: 21px;
@@ -106,35 +104,35 @@ header .gnb-area .gnb-list .ic-mail{
     /* 아이콘이랑 텍스트 정렬 */
     vertical-align: top;
 }
-header .gnb-area .gnb-list i.ic-shop{
+.gnb-area .gnb-list i.ic-shop{
     width: 24px;
     height: 20px;
     background-position: -154px -389px;
     display: block;
     margin-top: 4px;
 }
-header .gnb-area .gnb-list i.ic-shoplive{
+.gnb-area .gnb-list i.ic-shoplive{
     width: 54px;
     height: 20px;
     background-position: -202px -299px;
     display: block;
     margin-top: 4px;
 }
-header .gnb-area .gnb-list i.ic-tv{
+.gnb-area .gnb-list i.ic-tv{
     display: inline-block;
     width: 12px; height: 14px;
     background-position: -444px -49px;
     margin: 9px 2px 0 0;
     vertical-align: top;
 }
-header .gnb-area .gnb-list.list02{
+.gnb-area .gnb-list.list02{
     margin-left: 12px;
     color: #000;
 }
-header .gnb-area .gnb-list::after{content: '';clear: both;display: block;}
-header .gnb-area .gnb-item{float: left;}
-header .gnb-area .gnb-item+.gnb-item{margin-left: 12px;}
-header .gnb-area .btn-more{
+.gnb-area .gnb-list::after{content: '';clear: both;display: block;}
+.gnb-area .gnb-item{float: left;}
+.gnb-area .gnb-item+.gnb-item{margin-left: 12px;}
+.gnb-area .btn-more{
     float: left;
     margin-left: 17px;
     font-size: 13px;
@@ -143,7 +141,7 @@ header .gnb-area .btn-more{
     text-align: right;
     font-weight: normal;
 }
-header .gnb-area .btn-more::after{
+.gnb-area .btn-more::after{
     display: inline-block;
     content: '';
     width: 11px;
@@ -152,12 +150,12 @@ header .gnb-area .btn-more::after{
     margin-left: 4px;
     vertical-align: 2px;
 }
-header .weather-area{
+.weather-area{
     float: right;
     max-width: 270px;
     overflow: hidden;
 }
-header .weather-area .weather-info{
+.weather-area .weather-info{
     width: 100%;
     padding: 12px 0 11px;
     font-size: 13px;
@@ -166,7 +164,7 @@ header .weather-area .weather-info{
     display: inline-block;
     overflow: hidden;
 }
-header .weather-area .ic-weather::before{
+.weather-area .ic-weather::before{
     content: '';
     background-image: url(../images/ic-weather.png);
     background-repeat: no-repeat;
@@ -178,36 +176,36 @@ header .weather-area .ic-weather::before{
     float: left;
     margin-right: 9px;
 }
-header .weather-area .current{
+.weather-area .current{
     float: left;
 }
 
-header .weather-area .current .num{
+.weather-area .current .num{
     font-size: 15px;
     font-weight: bold;
 }
-header .weather-area .current .txt{
+.weather-area .current .txt{
     /* margin-left: 5px; */
     font-weight: bold;
 }
-header .weather-area .degree{
+.weather-area .degree{
     float: left;
     margin-left: 9px;
 }
-header .weather-area .degree .min{
+.weather-area .degree .min{
     color: #2586ee;
 }
-header .weather-area .degree .max{
+.weather-area .degree .max{
     color: #e9564a;
 }
-header .weather-area .degree .max::before{
+.weather-area .degree .max::before{
     content: '';
     width: 5px;
     height: 11px;
     background-position: -444px -392px;
     display: inline-block;
 }
-header .weather-area .degree .location{
+.weather-area .degree .location{
     padding-left: 9px;
     font-size: 12px;
     color: grey;
@@ -224,9 +222,3 @@ header .weather-area .degree .location{
 }
 /* ctrl+shift+1 */
 .container::after{content: '';clear: both;display: block;}
-
-
-
-footer{
-
-}
